--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/style.css' />
+    <script type='text/javascript' src='/application.js'></script>
   </head>
   <body>
     {{{body}}}
