react components itself

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,2 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="form_place"></div>
+<script type='text/javascript' src='/application.js'></script>
