--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/style.css' />
-    <script type='text/javascript' src='/application.js'></script>
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+    <link rel='stylesheet' href='/pure.css'/>
+</head>
+<body>
+<div id="layout" class="pure-g">
+    <div class="sidebar pure-u-1 pure-u-md-1-4">
+        <div class="header">
+            <h1 class="brand-title">File diff</h1>
+        </div>
+    </div>
+    <div class="content pure-u-1 pure-u-md-3-4">
+        {{{body}}}
+    </div>
+</div>
+</body>
 </html>
